@@ -20,10 +20,14 @@ For more information, please email arimus@users.sourceforge.net
 */
 package net.sf.jweather.metar;
 
-import java.util.Date;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Date;
 import java.util.Iterator;
-import org.apache.log4j.Logger;
+import java.util.TimeZone;
+
+import org.slf4j.LoggerFactory;
 
 /**
  * Responsible for storing METAR data and providing methods for accessing
@@ -37,9 +41,9 @@ import org.apache.log4j.Logger;
  * @see <a href="WeatherCondition.html">WeatherCondition</a>
  */
 public class Metar {
-	private static final Logger log = Logger.getLogger("net.sf.jweather");
+	private static org.slf4j.Logger logger = LoggerFactory.getLogger(Metar.class);
 
-  String reportString = null;
+	String reportString = null;
 	String dateString = "";
 	Date date = null;
 	String reportModifier = "";
@@ -60,189 +64,190 @@ public class Metar {
 	Float temperaturePrecise = null;
 	Float dewPoint = null;
 	Float dewPointPrecise = null;
-	ArrayList weatherConditions = new ArrayList();
-	ArrayList skyConditions = new ArrayList();
-	ArrayList runwayVisualRanges = new ArrayList();
-	ArrayList obscurations = new ArrayList();
+	String utcDate = null;
+	ArrayList<WeatherCondition> weatherConditions = new ArrayList<WeatherCondition>();
+	ArrayList<SkyCondition> skyConditions = new ArrayList<SkyCondition>();
+	ArrayList<RunwayVisualRange> runwayVisualRanges = new ArrayList<RunwayVisualRange>();
+	ArrayList<Obscuration> obscurations = new ArrayList<Obscuration>();
 	private boolean isNoSignificantChange = false;
-  private String becoming = null;
+	private String becoming = null;
 
-	public Metar() {    	
-		log.debug("Metar: instantiated");
+	public Metar() {
+		logger.debug("Metar: instantiated");
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value string that represents the date this METAR report was
 	 * generated
-     */
+	 */
 	protected void setDateString(String value) {
 		this.dateString = value;
 	}
 
-    /**
-     *
-     * @return string that represents the date this METAR report was generated
-     */
+	/**
+	 *
+	 * @return string that represents the date this METAR report was generated
+	 */
 	public String getDateString() {
 		return dateString;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value the date this METAR report was generated
-     */
+	 */
 	protected void setDate(Date value) {
 		this.date = value;
 	}
 
-    /**
-     *
-     * @return the date this METAR report was generated
-     */
+	/**
+	 *
+	 * @return the date this METAR report was generated
+	 */
 	public Date getDate() {
 		return date;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value the modifier of the report, which specifies whether this
 	 * report was an automated report or was a corrected report
-     */
+	 */
 	protected void setReportModifier(String value) {
 		this.reportModifier = value;
 	}
 
-    /**
-     *
-     * @return the modifier of the report, which specifies whether this report
-     * was an automated report or was a corrected report
-     */
+	/**
+	 *
+	 * @return the modifier of the report, which specifies whether this report
+	 * was an automated report or was a corrected report
+	 */
 	public String getReportModifier() {
 		return reportModifier;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value the station id of the station that generated this METAR
 	 * report
-     */
+	 */
 	protected void setStationID(String value) {
 		this.stationID = value;
 	}
 
-    /**
-     *
-     * @return the station id of the station that generated this METAR report
-     */
+	/**
+	 *
+	 * @return the station id of the station that generated this METAR report
+	 */
 	public String getStationID() {
 		return stationID;
 	}
 
-    /**
-     *
-     * @param value the direction the wind is blowing in (in degrees)
-     */
+	/**
+	 *
+	 * @param value the direction the wind is blowing in (in degrees)
+	 */
 	protected void setWindDirection(Integer value) {
 		this.windDirection = value;
 	}
 
-    /**
-     *
-     * @return the direction the wind is blowing in (in degrees)
-     */
+	/**
+	 *
+	 * @return the direction the wind is blowing in (in degrees)
+	 */
 	public Integer getWindDirection() {
 		return windDirection;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value the minimum wind direction (in degrees) for variable wind
 	 * directions
-     */
+	 */
 	protected void setWindDirectionMin(Integer value) {
 		this.windDirectionMin = value;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @return the minimum wind direction (in degrees) for variable wind
 	 * directions
-     */
+	 */
 	public Integer getWindDirectionMin() {
 		return windDirectionMin;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @param value the maximum wind direction (in degrees) for variable wind
 	 * directions
-     */
+	 */
 	protected void setWindDirectionMax(Integer value) {
 		this.windDirectionMax = value;
 	}
 
-    /**
-     *
+	/**
+	 *
 	 * @return the maximum wind direction (in degrees) for variable wind
 	 * directions
-     */
+	 */
 	public Integer getWindDirectionMax() {
 		return windDirectionMax;
 	}
 
-    /**
-     *
-     * @param value whether or not the wind direction is variable
-     */
+	/**
+	 *
+	 * @param value whether or not the wind direction is variable
+	 */
 	protected void setWindDirectionIsVariable(boolean value) {
 		this.windDirectionIsVariable = value;
 	}
 
-    /**
-     *
-     * @return whether or not the wind direction is variable
-     */
+	/**
+	 *
+	 * @return whether or not the wind direction is variable
+	 */
 	public boolean getWindDirectionIsVariable() {
 		return windDirectionIsVariable;
 	}
 
-    /**
-     *
-     * @param value wind speed in knots
-     */
+	/**
+	 *
+	 * @param value wind speed in knots
+	 */
 	protected void setWindSpeed(Float value) {
 		this.windSpeed = value;
 	}
 
-    /**
-     *
-     * @param value wind speed in meters per second
-     */
+	/**
+	 *
+	 * @param value wind speed in meters per second
+	 */
 	protected void setWindSpeedInMPS(Float value) {
-		this.windSpeed = new Float(value.floatValue() / 0.5148);
+		this.windSpeed = Float.valueOf((float)(value.floatValue() / 0.5148));
 	}
 
-    /**
-     *
-     * @return wind speed in meters per second
-     */
+	/**
+	 *
+	 * @return wind speed in meters per second
+	 */
 	public Float getWindSpeedInMPS() {
-		return new Float(this.windSpeed.floatValue() * 0.5148);
+		return Float.valueOf((float)(this.windSpeed.floatValue() * 0.5148));
 	}
 
-    /**
-     *
-     * @return wind speed in knots
-     */
+	/**
+	 *
+	 * @return wind speed in knots
+	 */
 	public Float getWindSpeedInKnots() {
 		return this.windSpeed;
 	}
 
-    /**
-     *
-     * @return wind speed in MPH
-     */
+	/**
+	 *
+	 * @return wind speed in MPH
+	 */
 	public Float getWindSpeedInMPH() {
 		if (this.windSpeed == null) {
 			return null;
@@ -253,45 +258,45 @@ public class Metar {
 		// round to the nearest MPH
 		f = Math.round(f);
 
-		return new Float(f);
+		return Float.valueOf((float)f);
 	}
 
-    /**
-     *
-     * @param value wind gust speed in knots
-     */
+	/**
+	 *
+	 * @param value wind gust speed in knots
+	 */
 	protected void setWindGusts(Float value) {
 		this.windGusts = value;
 	}
 
-    /**
-     *
-     * @param value wind gust speed in meters per second
-     */
+	/**
+	 *
+	 * @param value wind gust speed in meters per second
+	 */
 	protected void setWindGustsInMPS(Float value) {
-		this.windGusts = new Float(value.floatValue() / 0.5148);
+		this.windGusts = Float.valueOf((float)(value.floatValue() / 0.5148));
 	}
 
-    /**
-     *
-     * @return wind gust speed in meters per second
-     */
+	/**
+	 *
+	 * @return wind gust speed in meters per second
+	 */
 	public Float getWindGustsInMPS() {
-		return new Float(this.windGusts.floatValue() * 0.5148);
+		return Float.valueOf((float)(this.windGusts.floatValue() * 0.5148));
 	}
 
-    /**
-     *
-     * @return wind gust speed in knots
-     */
+	/**
+	 *
+	 * @return wind gust speed in knots
+	 */
 	public Float getWindGustsInKnots() {
 		return this.windGusts;
 	}
 
-    /**
-     *
-     * @return wind gust speed in MPH
-     */
+	/**
+	 *
+	 * @return wind gust speed in MPH
+	 */
 	public Float getWindGustsInMPH() {
 		if (this.windGusts == null) {
 			return null;
@@ -302,177 +307,177 @@ public class Metar {
 		// round to the nearest MPH
 		f = Math.round(f);
 
-		return new Float(f);
+		return Float.valueOf((float)f);
 	}
 
-    /**
+	/**
 	 * this function will also set visibility to 10KM, since
 	 * CAVOK means visibility is greater than 10KM
-     *
-     * @param value boolean whether or not CAVOK was given
-     */
+	 *
+	 * @param value boolean whether or not CAVOK was given
+	 */
 	protected void setIsCavok(boolean value) {
 		this.isCavok = value;
 		// set visibility to 10
-		setVisibilityInKilometers(new Float(10));
+		setVisibilityInKilometers(Float.valueOf(10));
 	}
 
-    /**
-     * @return value boolean whether or not CAVOK is true
-     */
+	/**
+	 * @return value boolean whether or not CAVOK is true
+	 */
 	public boolean getIsCavok() {
 		return this.isCavok;
 	}
 
-    /**
-     *
-     * @param value visibility in miles
-     */
+	/**
+	 *
+	 * @param value visibility in miles
+	 */
 	protected void setVisibility(Float value) {
 		this.visibilityMiles = value;
 		this.visibilityKilometers = null;
 		this.visibilityMeters = null;
 	}
 
-    /**
-     *
-     * @param value visibility in kilometers
-     */
+	/**
+	 *
+	 * @param value visibility in kilometers
+	 */
 	protected void setVisibilityInKilometers(Float value) {
 		this.visibilityKilometers = value;
 		this.visibilityMiles = null;
 		this.visibilityMeters = null;
 	}
 
-    /**
-     *
-     * @param value visibility in meters
-     */
+	/**
+	 *
+	 * @param value visibility in meters
+	 */
 	protected void setVisibilityInMeters(Float value) {
 		this.visibilityMeters = value;
 		this.visibilityMiles = null;
 		this.visibilityKilometers = null;
 	}
 
-    /**
-     *
-     * @return visibility in miles
-     */
+	/**
+	 *
+	 * @return visibility in miles
+	 */
 	public Float getVisibility() {
 		if (visibilityMiles != null) {
 			return visibilityMiles;
 		} else if (visibilityKilometers != null) {
-			return new Float(visibilityKilometers.floatValue() / 1.609344);
+			return Float.valueOf((float)(visibilityKilometers.floatValue() / 1.609344));
 		} else if (visibilityMeters != null) {
-			return new Float(visibilityMeters.floatValue() / 1609.344);
+			return Float.valueOf((float)(visibilityMeters.floatValue() / 1609.344));
 		}
 		return null;
 	}
 
-    /**
-     *
-     * @return visibility in kilometers
-     */
+	/**
+	 *
+	 * @return visibility in kilometers
+	 */
 	public Float getVisibilityInKilometers() {
 		if (visibilityKilometers != null) {
 			return visibilityKilometers;
 		} else if (visibilityMeters != null) {
-			return new Float(visibilityMeters.floatValue() / 1000);
+			return Float.valueOf((float)(visibilityMeters.floatValue() / 1000));
 		} else if (visibilityMiles != null) {
-			return new Float(visibilityMiles.floatValue() * 1.609344);
+			return Float.valueOf((float)(visibilityMiles.floatValue() * 1.609344));
 		}
 		return null;
 	}
 
-    /**
-     *
-     * @return visibility in meters
-     */
+	/**
+	 *
+	 * @return visibility in meters
+	 */
 	public Float getVisibilityInMeters() {
 		if (visibilityMeters != null) {
 			return visibilityMeters;
 		} else if (visibilityKilometers != null) {
-			return new Float(visibilityKilometers.floatValue() * 1000);
+			return Float.valueOf((float)(visibilityKilometers.floatValue() * 1000));
 		} else if (visibilityKilometers != null) {
-			return new Float(visibilityKilometers.floatValue() * 1609.344);
+			return Float.valueOf((float)(visibilityKilometers.floatValue() * 1609.344));
 		}
 		return null;
 	}
 
-    /**
-     *
-     * @param value visibility less than
-     */
+	/**
+	 *
+	 * @param value visibility less than
+	 */
 	protected void setVisibilityLessThan(boolean value) {
 		this.visibilityLessThan = value;
 	}
 
-    /**
-     *
-     * @return visibility less than
-     */
+	/**
+	 *
+	 * @return visibility less than
+	 */
 	public boolean getVisibilityLessThan() {
 		return visibilityLessThan;
 	}
 
-    /**
-     *
-     * @param value pressure in inches Hg
-     */
+	/**
+	 *
+	 * @param value pressure in inches Hg
+	 */
 	protected void setPressure(Float value) {
-	  // Round so we're consistent
-          if( value != null )
-	  {
-            float val = value.floatValue();
-            val = (float)Math.round(val*100)/100;
-            this.pressure = new Float(val);
-	  }
-	  else {
-	    this.pressure = value;
-	  }
+		// Round so we're consistent
+		if( value != null )
+		{
+			float val = value.floatValue();
+			val = (float)Math.round(val*100)/100;
+			this.pressure = Float.valueOf((float)(val));
+		}
+		else {
+			this.pressure = value;
+		}
 	}
 
-    /**
-     *
-     * @return pressure in inches Hg
-     */
+	/**
+	 *
+	 * @return pressure in inches Hg
+	 */
 	public Float getPressure() {
 		return pressure;
 	}
 
-    /**
-     *
-     * @return pressure in hPa
-     */
-    public Integer getPressureInHectoPascals() {
-	    if( pressure == null ) return null;
+	/**
+	 *
+	 * @return pressure in hPa
+	 */
+	public Integer getPressureInHectoPascals() {
+		if( pressure == null ) return null;
 
-      // convert to hPa
-      float val = pressure.floatValue()*33.8639F;  
-      // round
-      return new Integer(Math.round(val)); 
-    }
+		// convert to hPa
+		float val = pressure.floatValue()*33.8639F;
+		// round
+		return Integer.valueOf((Math.round(val)));
+	}
 
-    /**
-     *
-     * @param value temperature in celsius
-     */
+	/**
+	 *
+	 * @param value temperature in celsius
+	 */
 	protected void setTemperature(Float value) {
 		this.temperature = value;
 	}
 
-    /**
-     *
-     * @return temperature in celsius
-     */
+	/**
+	 *
+	 * @return temperature in celsius
+	 */
 	public Float getTemperatureInCelsius() {
 		return this.temperature;
 	}
 
-    /**
-     *
-     * @return temperature in fahrenheit
-     */
+	/**
+	 *
+	 * @return temperature in fahrenheit
+	 */
 	public Float getTemperatureInFahrenheit() {
 		if (this.temperature == null) {
 			return null;
@@ -481,29 +486,29 @@ public class Metar {
 		// round to the nearest 1/10th
 		float f = (float)Math.round((this.temperature.floatValue()*9/5+32)*10)/10;
 
-		return new Float(f);
+		return Float.valueOf((float)(f));
 	}
 
-    /**
-     *
-     * @param value precise temperature in celsius
-     */
+	/**
+	 *
+	 * @param value precise temperature in celsius
+	 */
 	protected void setTemperaturePrecise(Float value) {
 		this.temperaturePrecise = value;
 	}
 
-    /**
-     *
-     * @return precise temperature in celsius (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return precise temperature in celsius (nearest 1/10th degree)
+	 */
 	public Float getTemperaturePreciseInCelsius() {
 		return this.temperaturePrecise;
 	}
 
-    /**
-     *
-     * @return precise temperature in fahrenheit (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return precise temperature in fahrenheit (nearest 1/10th degree)
+	 */
 	public Float getTemperaturePreciseInFahrenheit() {
 		if (this.temperaturePrecise == null) {
 			return null;
@@ -511,13 +516,13 @@ public class Metar {
 
 		// round to the nearest 1/10th
 		float f = (float)Math.round((this.temperaturePrecise.floatValue()*9/5+32)*10)/10;
-		return new Float(f);
+		return Float.valueOf((float)(f));
 	}
 
-    /**
-     *
-     * @return most precise temperature in celsius (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return most precise temperature in celsius (nearest 1/10th degree)
+	 */
 	public Float getTemperatureMostPreciseInCelsius() {
 		if (this.temperaturePrecise != null) {
 			return this.temperaturePrecise;
@@ -526,46 +531,46 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return most precise temperature in fahrenheit (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return most precise temperature in fahrenheit (nearest 1/10th degree)
+	 */
 	public Float getTemperatureMostPreciseInFahrenheit() {
 		if (this.temperaturePrecise != null) {
 			// round to the nearest 1/10th
 			float f = (float)Math.round((this.temperaturePrecise.floatValue()*9/5+32)*10)/10;
 
-			return new Float(f);
+			return Float.valueOf((float)(f));
 		} else if (this.temperature != null) {
 			// round to the nearest 1/10th
 			float f = (float)Math.round((this.temperature.floatValue()*9/5+32)*10)/10;
 
-			return new Float(f);
+			return Float.valueOf((float)(f));
 		} else {
 			return null;
 		}
 	}
 
-    /**
-     *
-     * @param value dew point in celsius
-     */
+	/**
+	 *
+	 * @param value dew point in celsius
+	 */
 	protected void setDewPoint(Float value) {
 		this.dewPoint = value;
 	}
 
-    /**
-     *
-     * @return dew point in celsius
-     */
+	/**
+	 *
+	 * @return dew point in celsius
+	 */
 	public Float getDewPointInCelsius() {
 		return this.dewPoint;
 	}
 
-    /**
-     *
-     * @return dew point in fahrenheit
-     */
+	/**
+	 *
+	 * @return dew point in fahrenheit
+	 */
 	public Float getDewPointInFahrenheit() {
 		if (this.dewPoint == null) {
 			return null;
@@ -574,29 +579,29 @@ public class Metar {
 		// round to the nearest 1/10th
 		float f = (float)Math.round((this.dewPoint.floatValue()*9/5+32)*10)/10;
 
-		return new Float(f);
+		return Float.valueOf((float)(f));
 	}
 
-    /**
-     *
-     * @param value precise dew point in celsius
-     */
+	/**
+	 *
+	 * @param value precise dew point in celsius
+	 */
 	protected void setDewPointPrecise(Float value) {
 		this.dewPointPrecise = value;
 	}
 
-    /**
-     *
-     * @return dew point in celsius (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return dew point in celsius (nearest 1/10th degree)
+	 */
 	public Float getDewPointPreciseInCelsius() {
 		return this.dewPointPrecise;
 	}
 
-    /**
-     *
-     * @return dew point in fahrenheit (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return dew point in fahrenheit (nearest 1/10th degree)
+	 */
 	public Float getDewPointPreciseInFahrenheit() {
 		if (this.dewPointPrecise == null) {
 			return null;
@@ -605,13 +610,13 @@ public class Metar {
 		// round to the nearest 1/10th
 		float f = (float)Math.round((this.dewPointPrecise.floatValue()*9/5+32)*10)/10;
 
-		return new Float(f);
+		return Float.valueOf((float)(f));
 	}
 
-    /**
-     *
-     * @return most precise dew point in celsius (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return most precise dew point in celsius (nearest 1/10th degree)
+	 */
 	public Float getDewPointMostPreciseInCelsius() {
 		if (this.dewPointPrecise != null) {
 			return this.dewPointPrecise;
@@ -620,63 +625,63 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return most precise dew point in fahrenheit (nearest 1/10th degree)
-     */
+	/**
+	 *
+	 * @return most precise dew point in fahrenheit (nearest 1/10th degree)
+	 */
 	public Float getDewPointMostPreciseInFahrenheit() {
 		if (this.dewPointPrecise != null) {
 			// round to the nearest 1/10th
 			float f = (float)Math.round((this.dewPointPrecise.floatValue()*9/5+32)*10)/10;
 
-			return new Float(f);
+			return Float.valueOf((float)(f));
 		} else if (this.dewPoint != null) {
 			// round to the nearest 1/10th
 			float f = (float)Math.round((this.dewPoint.floatValue()*9/5+32)*10)/10;
 
-			return new Float(f);
+			return Float.valueOf((float)(f));
 		} else {
 			return null;
 		}
 	}
 
-    /**
-     *
-     * @param value whether or not the weather has changed significantly
-     */
+	/**
+	 *
+	 * @param value whether or not the weather has changed significantly
+	 */
 	protected void setIsNoSignificantChange(boolean value) {
 		this.isNoSignificantChange = value;
 	}
 
-  /**
-   * 
-   * @return whether or not there has been a significant change in
+	/**
+	 *
+	 * @return whether or not there has been a significant change in
 	 * weather
-   */
+	 */
 	public boolean getIsNoSignificantChange() {
 		return isNoSignificantChange;
 	}
 
-  /**
-   * Get the "BECMG" string in raw form. We don't have the ability to parse
-   * this string yet, so it's being stored in raw form for now.
-   * @return Returns The becoming (BECMG) String in raw form.
-   */
-  public String getBecoming() {
-    return becoming;
-  }
-  /**
-   * Set the "BECMG" string in raw form. We don't have the ability to parse
-   * this string yet, so it's being stored in raw form for now.
-   * @param becoming The becoming (BECMG) String in raw form.
-   */
-  public void setBecoming(String becoming) {
-    this.becoming = becoming;
-  }
+	/**
+	 * Get the "BECMG" string in raw form. We don't have the ability to parse
+	 * this string yet, so it's being stored in raw form for now.
+	 * @return Returns The becoming (BECMG) String in raw form.
+	 */
+	public String getBecoming() {
+		return becoming;
+	}
+	/**
+	 * Set the "BECMG" string in raw form. We don't have the ability to parse
+	 * this string yet, so it's being stored in raw form for now.
+	 * @param becoming The becoming (BECMG) String in raw form.
+	 */
+	public void setBecoming(String becoming) {
+		this.becoming = becoming;
+	}
 	/**
 	 *
 	 * @param wc a WeatherCondition object
-     * @see WeatherCondition
+	 * @see WeatherCondition
 	 */
 	public void addWeatherCondition(WeatherCondition wc) {
 		weatherConditions.add(wc);
@@ -685,7 +690,7 @@ public class Metar {
 	/**
 	 *
 	 * @return a WeatherCondition object
-     * @see WeatherCondition
+	 * @see WeatherCondition
 	 */
 	public WeatherCondition getWeatherCondition(int i) {
 		if (weatherConditions.size() >= i) {
@@ -695,19 +700,19 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return an ArrayList of WeatherCondition objects
-     * @see WeatherCondition
-     */
-	public ArrayList getWeatherConditions() {
+	/**
+	 *
+	 * @return an ArrayList of WeatherCondition objects
+	 * @see WeatherCondition
+	 */
+	public ArrayList<WeatherCondition> getWeatherConditions() {
 		return weatherConditions;
 	}
 
 	/**
 	 *
 	 * @param sc a SkyCondition object
-     * @see SkyCondition
+	 * @see SkyCondition
 	 */
 	public void addSkyCondition(SkyCondition sc) {
 		skyConditions.add(sc);
@@ -716,7 +721,7 @@ public class Metar {
 	/**
 	 *
 	 * @return a SkyCondition object
-     * @see SkyCondition
+	 * @see SkyCondition
 	 */
 	public SkyCondition getSkyCondition(int i) {
 		if (skyConditions.size() >= i) {
@@ -726,19 +731,19 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return an ArrayList of SkyCondition objects
-     * @see SkyCondition
-     */
-	public ArrayList getSkyConditions() {
+	/**
+	 *
+	 * @return an ArrayList of SkyCondition objects
+	 * @see SkyCondition
+	 */
+	public ArrayList<SkyCondition> getSkyConditions() {
 		return skyConditions;
 	}
 
 	/**
 	 *
 	 * @param rvr a RunwayVisualRange object
-     * @see RunwayVisualRange
+	 * @see RunwayVisualRange
 	 */
 	public void addRunwayVisualRange(RunwayVisualRange rvr) {
 		runwayVisualRanges.add(rvr);
@@ -747,7 +752,7 @@ public class Metar {
 	/**
 	 *
 	 * @return a RunwayVisualRange object
-     * @see RunwayVisualRange
+	 * @see RunwayVisualRange
 	 */
 	public RunwayVisualRange getRunwayVisualRange(int i) {
 		if (runwayVisualRanges.size() >= i) {
@@ -757,19 +762,19 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return an ArrayList of RunwayVisualRange objects
-     * @see RunwayVisualRange
-     */
-	public ArrayList getRunwayVisualRanges() {
+	/**
+	 *
+	 * @return an ArrayList of RunwayVisualRange objects
+	 * @see RunwayVisualRange
+	 */
+	public ArrayList<RunwayVisualRange> getRunwayVisualRanges() {
 		return runwayVisualRanges;
 	}
 
 	/**
 	 *
 	 * @param o an Obscuration object
-     * @see Obscuration
+	 * @see Obscuration
 	 */
 	public void addObscuration(Obscuration o) {
 		obscurations.add(o);
@@ -778,7 +783,7 @@ public class Metar {
 	/**
 	 *
 	 * @return a Obscuration object
-     * @see Obscuration
+	 * @see Obscuration
 	 */
 	public Obscuration getObscuration(int i) {
 		if (obscurations.size() >= i) {
@@ -788,25 +793,30 @@ public class Metar {
 		}
 	}
 
-    /**
-     *
-     * @return an ArrayList of Obscuration objects
-     * @see Obscuration
-     */
-	public ArrayList getObscurations() {
+	/**
+	 *
+	 * @return an ArrayList of Obscuration objects
+	 * @see Obscuration
+	 */
+	public ArrayList<Obscuration> getObscurations() {
 		return obscurations;
 	}
-	
-    /**
-     * display metar data in a human-readable format
-     */
-    public void print() {
+
+	/**
+	 * display metar data in a human-readable format
+	 */
+	public void print() {
+		System.out.println(getReportString());
 		System.out.println("station id : " + getStationID());
+		System.out.println("date : " + getDateString());
+//		System.out.println("day : " + date.getDay());
+//		System.out.println("hour : " + date.getHours());
+//		System.out.println("hour : " + date.getMinutes());
 		System.out.println("wind dir   : " + getWindDirection() + " degrees");
 		System.out.println("wind speed : " + getWindSpeedInMPH() + " mph, " +
-				                             getWindSpeedInKnots() + " knots");
+				getWindSpeedInKnots() + " knots");
 		System.out.println("wind gusts : " + getWindGustsInMPH() + " mph, " +
-				                             getWindGustsInKnots() + " knots");
+				getWindGustsInKnots() + " knots");
 		if (!getVisibilityLessThan()) {
 			System.out.println("visibility : " + getVisibility() + " mile(s)");
 		} else {
@@ -815,60 +825,74 @@ public class Metar {
 
 		System.out.println("pressure   : " + getPressure() + " in Hg");
 		System.out.println("temperaturePrecise: " +
-				           getTemperaturePreciseInCelsius() + " C, " +
-				           getTemperaturePreciseInFahrenheit() + " F");
+				getTemperaturePreciseInCelsius() + " C, " +
+				getTemperaturePreciseInFahrenheit() + " F");
 		System.out.println("temperature: " +
-				           getTemperatureInCelsius() + " C, " +
-				           getTemperatureInFahrenheit() + " F");
+				getTemperatureInCelsius() + " C, " +
+				getTemperatureInFahrenheit() + " F");
 		System.out.println("temperatureMostPrecise: " +
-				           getTemperatureMostPreciseInCelsius() + " C, " +
-				           getTemperatureMostPreciseInFahrenheit() + " F");
+				getTemperatureMostPreciseInCelsius() + " C, " +
+				getTemperatureMostPreciseInFahrenheit() + " F");
 
 		System.out.println("dewPointPrecise: " +
-				           getDewPointPreciseInCelsius() + " C, " +
-				           getDewPointPreciseInFahrenheit() + " F");
+				getDewPointPreciseInCelsius() + " C, " +
+				getDewPointPreciseInFahrenheit() + " F");
 		System.out.println("dewPoint: " +
-				           getDewPointInCelsius() + " C, " +
-				           getDewPointInFahrenheit() + " F");
+				getDewPointInCelsius() + " C, " +
+				getDewPointInFahrenheit() + " F");
 		System.out.println("dewPointMostPrecise: " +
-				           getDewPointMostPreciseInCelsius() + " C, " +
-				           getDewPointMostPreciseInFahrenheit() + " F");
+				getDewPointMostPreciseInCelsius() + " C, " +
+				getDewPointMostPreciseInFahrenheit() + " F");
 
 		if (getWeatherConditions() != null) {
-			Iterator i = getWeatherConditions().iterator();
+			Iterator<WeatherCondition> i = getWeatherConditions().iterator();
 			while (i.hasNext()) {
 				WeatherCondition weatherCondition = (WeatherCondition)i.next();
 				System.out.println(weatherCondition.getNaturalLanguageString());
 			}
 		}
 		if (getSkyConditions() != null) {
-			Iterator i = getSkyConditions().iterator();
+			Iterator<SkyCondition> i = getSkyConditions().iterator();
 			while (i.hasNext()) {
 				SkyCondition skyCondition = (SkyCondition)i.next();
 				System.out.println(skyCondition.getNaturalLanguageString());
 			}
 		}
+		if (getObscurations() != null) {
+			Iterator<Obscuration> i = getObscurations().iterator();
+			while (i.hasNext()) {
+				Obscuration obs = (Obscuration)i.next();
+				System.out.println(obs.getNaturalLanguageString());
+			}
+		}
+		if (getRunwayVisualRanges() != null) {
+			Iterator<RunwayVisualRange> i = getRunwayVisualRanges().iterator();
+			while (i.hasNext()) {
+				RunwayVisualRange runway = (RunwayVisualRange)i.next();
+				System.out.println(runway.getNaturalLanguageString());
+			}
+		}
 	}
-  
-  /**
-   * Retrieve the full report string value. This is the report in its
-   * original form
-   * 
-   * @return The original report string.
-   */
-  public String getReportString() {
-    return reportString;
-  }
 
-  /**
-   * Set the full report string value. This is the report in its
-   * original form
-   * 
-   * @param string  The original report string.
-   */
-  public void setReportString(String string) {
-    reportString = string;
-  }
+	/**
+	 * Retrieve the full report string value. This is the report in its
+	 * original form
+	 *
+	 * @return The original report string.
+	 */
+	public String getReportString() {
+		return reportString;
+	}
+
+	/**
+	 * Set the full report string value. This is the report in its
+	 * original form
+	 *
+	 * @param string  The original report string.
+	 */
+	public void setReportString(String string) {
+		reportString = string;
+	}
 
 }
 
